--- a/BulkyWeb/Views/Category/Create.cshtml
+++ b/BulkyWeb/Views/Category/Create.cshtml
@@ -6,6 +6,7 @@
             <h2 class="text-primary">Create Category</h2>
         </div>
         <hr class="w-100 border-2 border-primary" />
+        <div asp-validation-summary="All"></div>
         <div class="mb-3">
             <label asp-for="Name"></label>
             <input asp-for="Name" type="text" class="form-control" />
